[package]
name = "llama-rs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

llama-rs = {git = "https://github.com/setzer22/llama-rs.git"}
rand = "0.8.5"
